Deb package. More tests. Fixes infinite loop listing.

--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -206,6 +206,282 @@
 		</profile>
 		
         <profile>
+            <id>package</id>
+            <build>
+                <plugins>
+                
+	                <plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>generate-package-resources</id>
+							<phase>package</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<delimiters>
+									<delimiter>[[*]]</delimiter>
+								</delimiters>
+								<outputDirectory>${project.basedir}/target/staging</outputDirectory>
+								<resources>
+									<resource>
+										<directory>src/main/packages</directory>
+										<filtering>true</filtering>
+										<includes>
+											<include>configuration/**/*</include>
+											<include>deb/**/*</include>
+											<include>logrotate.d/**/*</include>
+											<include>systemd/**/*</include>
+										</includes>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+                
+                    <plugin>
+					    <groupId>org.vafer</groupId>
+					    <artifactId>jdeb</artifactId>
+					    <version>1.14</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<id>jdeb</id>
+								<goals>
+									<goal>jdeb</goal>
+								</goals>
+								<configuration>
+									<changesOut>${project.basedir}/target/staging/${sdk.assembly.finalName}.changes</changesOut>
+									<verbose>true</verbose>
+									<attach>false</attach>
+									<skipPOMs>false</skipPOMs>
+									<installDir>/usr/lib/tnfsj</installDir>
+									<controlDir>${project.basedir}/target/staging/deb/control</controlDir>
+									<deb>${project.basedir}/target/${sdk.assembly.finalName}-distribution.deb</deb>
+									<dataSet>
+										<!-- Client tools -->
+										<data>
+											<type>directory</type>
+											<src>../cli/target</src>
+											<includes>tnfscp,tnfsfuse,tnfstp</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/bin</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>755</filemode>
+											</mapper>
+										</data>
+
+										<!-- Servers -->
+										<data>
+											<type>directory</type>
+											<src>../daemon/target</src>
+											<includes>tnfsjd,tnfs-user</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/sbin</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>755</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../web/target</src>
+											<includes>tnfsjd-web</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/sbin</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>755</filemode>
+											</mapper>
+										</data>
+
+										<!-- HTML -->
+										<data>
+											<type>directory</type>
+											<src>../cli/target/generated-docs</src>
+											<includes>*.html</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/doc/tnfs-java</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../daemon/target/generated-docs</src>
+											<includes>*.html</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/doc/tnfs-java</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../web/target/generated-docs</src>
+											<includes>*.html</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/doc/tnfs-java</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+										<!-- Man Pages -->
+										<data>
+											<type>directory</type>
+											<src>../cli/target/generated-docs</src>
+											<includes>*.1</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/man/man1</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../daemon/target/generated-docs</src>
+											<includes>*.1</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/man/man1</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../web/target/generated-docs</src>
+											<includes>*.1</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/share/man/man1</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+										<!-- Java Librasries  -->
+										<data>
+											<type>directory</type>
+											<src>..</src>
+											<includes>cli/target/tnfs-java-cli-${project.version}.jar,client/target/tnfs-java-client-${project.version}.jar,daemon/target/tnfs-java-daemon-${project.version}.jar,daemonlib/target/tnfs-java-daemonlib-${project.version}.jar,fuse/target/tnfs-java-fuse-${project.version}.jar,lib/target/tnfs-java-lib-${project.version}.jar,nio/target/tnfs-java-nio-${project.version}.jar,server/target/tnfs-java-server-${project.version}.jar,web/target/tnfs-java-web-${project.version}.jar</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>2</strip>
+												<prefix>/usr/share/java</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>../extensions</src>
+											<includes>client/target/tnfs-java-client-extensions-${project.version}.jar,lib/target/tnfs-java-lib-extensions-${project.version}.jar,server/target/tnfs-java-server-extensions-${project.version}.jar</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>2</strip>
+												<prefix>/usr/share/java</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+										<!-- Source -->
+										<data>
+											<type>directory</type>
+											<src>..</src>
+											<includes>**/src/**/*,**/pom.xml,**/*LICENSE*,**/*README*</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/usr/src/tnfs-java-${project.version}</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+										<!-- Config -->
+										
+										<data>
+											<type>directory</type>
+											<src>target/staging/configuration</src>
+											<includes>**/*</includes>
+											<mapper>
+												<type>perm</type>
+												<prefix>/etc</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+										<data>
+											<type>directory</type>
+											<src>target/staging/logrotate.d</src>
+											<includes>*</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/etc/logrotate.d</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+										<!-- Services -->
+										<data>
+											<type>directory</type>
+											<src>target/staging/systemd</src>
+											<includes>*</includes>
+											<mapper>
+												<type>perm</type>
+												<strip>1</strip>
+												<prefix>/lib/systemd/system</prefix>
+												<user>root</user>
+												<group>root</group>
+												<filemode>644</filemode>
+											</mapper>
+										</data>
+
+									</dataSet>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+                </plugins>
+            </build>
+        </profile>
+		
+        <profile>
             <id>installer</id>
             <build>
                 <plugins>
