Be more secure by default and make localhost the default for installable builds for both file server and web server. It should still work out of the box on systems the have working mDNS.

--- a/daemon/src/main/docker/configuration/authentication.ini
+++ b/daemon/src/main/docker/configuration/authentication.ini
@@ -4,5 +4,7 @@
 ;----------------------------------------
 ;[authentication]
 
-	; Server Key - The servers key.
-	; key = 
+	; Where the servers key is located, either absolute, or \
+	; relative to this configuration file. The file is base64 encoded.
+	
+	;key-path = server-key.b64
