--- a/sdk/src/main/packages/configuration/tnfsjd-web/tnfsjd-web.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd-web/tnfsjd-web.ini
@@ -10,12 +10,12 @@
 ;----------------------------------------
 ; mDNS - Configuration for ZeroConf
 ;----------------------------------------
-[mdns] 
+;[mdns] 
 	; The address of the local interface that mDNS requests will be made from. If this is \
 	; a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
 	; `http` or `https` section will be used, otherwise the address will be interpreted in the same way \
 	; as the `http` or `https` `address`.
-	address = %
+	;address = %
 	 
 	; Announce - Announce this server using mDNS, allowing other hosts on your network  to easily find it and its configuration.
 	;announce = true
@@ -31,44 +31,44 @@
 ;----------------------------------------
 ; Mount - Repeat mount sections for multiple mounts
 ;----------------------------------------
-[mount]
+;[mount]
 
 	; Hostname - The hostname or IP address of the TNFS server.
-	hostname = localhost 
+	;hostname = localhost
 
 	; Path - The root path of the mount on the TNFS server.
-	path = /
+	;path = /
 
 	; Port - The port on which the TNFS server is listening.
-	port = 16384
+	;port = 16384
 
 	; Protocol - The protocol the TNFS server is listening for.
-	protocol = UDP
+	;protocol = UDP
 
 	; Name - The name of the mount as it will be displayed to the user.  If not supplied, will be generated from the hostname, port  and  path.
-	name = Local TNFS 
+	;name = Local TNFS 
 
 ;----------------------------------------
 ; HHTTP - Options for the insecure plain HTTP protocol
 ;----------------------------------------
-[http]
+;[http]
 
 	; Port - The port number on which the server will listen for HTTP requests. When zero,  HTTP will be disabled.
 	;port = 14080
 
-; Address - The IPv4 or IPv6 address of the interface the server will listen for HTTP  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
-	address = %
+	; Address - The IPv4 or IPv6 address of the interface the server will listen for HTTP  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
+	;address = %
 
 ;----------------------------------------
 ; HTTPS - Options for the insecure plain HTTPS protocol
 ;----------------------------------------
-[https]
+;[https]
 
 	; Port - The port number on which the server will listen for HTTPS requests.  When zero,  HTTPS will be disabled.
 	;port = 14443
 
 	; Address - The IPv4 or IPv6 address of the interface the server will listen for HTTPS  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
-	address = %
+	; address = %
 
 	; Key Password - The password for the key in the keystorre, if any.
 	; key-password = 
