--- a/sdk/src/main/packages/configuration/tnfsjd/mounts.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/mounts.ini
@@ -5,7 +5,7 @@
 [mount]
 
 	; Exported Path - The path that is exported to clients.
-	path = /public
+	path = /
 
 	; Local Path - The local path where these files for this mount actually are.
 	local = /usr/share/tnfsj/public
