--- a/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
@@ -4,5 +4,7 @@
 ;----------------------------------------
 ;[authentication]
 
-	; Server Key - The servers key.
-	; key = 
+	; Where the servers key is located, either absolute, or \
+	; relative to this configuration file. The file is base64 encoded.
+	
+	;key-path = server-key.b64
