--- a/sdk/src/main/packages/configuration/tnfsjd/tnfsjd.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/tnfsjd.ini
@@ -6,27 +6,33 @@
 
 	; UPnP - Try to map the port on your router to this machine using UPnP, exposing  
 	; this server to the internet.
-	upnp = false
+	;upnp = false
 	
 	; Port - The port number on which the server will listen for TNFS requests.
-	port = 16384
+	;port = 16384
 	
 	; Address - The IPv4 or IPv6 address of the interface the server will listen for TNFS \
 	; requests. The default is to listen to loopback only (`localhost`). Use * to listen on \
 	; all IPv4 andor IPv6 interfaces, depending on the default configuration, \
 	; or `::` to listen on all IPv6 addresses or `0.0.0.0` to listen on all \
 	; IPv4 addresses. You can also use `%` to indicate the first found LAN address.
-	address = %
+	;address = *
 	
 	; Protocols - The protocols to listen for. By default, both TCP and UDP are enabled.
-	protocols = TCP, UDP
+	;protocols = TCP, UDP
 	
 	; Name - Use this as the advertised mDNS/Bonjour service name. Defaults to \
 	; `TNFS on {hostname}`.  {hostname} is replaced by actual hostname of bound address..
-	name = TNFS on {hostname}
+	;name = TNFS on {hostname}
 	
 [mdns]
 	
 	; Announce - Announce this server using mDNS, allowing other hosts on your network  
 	; to easily find it and its configuration.
-	announce = true
+	;announce = true
+	
+	; The address of the local interface that mDNS requests will be made from. If this is \
+	; a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
+	; `server` section will be used , otherwise the address will be interpreted in the same way \
+	; as the `server` `address`.
+	;address = 
