--- a/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
+++ b/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
@@ -114,7 +114,7 @@
 				  on IPv4 and IPV6 interfaces. A `%` will listen on  the first found LAN address. 
 	type = TEXT 
 	descriminator = IP
-	default-value = %
+	default-value = 
 
 ; --------------------------------
 ; HTTPS configuration
@@ -138,7 +138,7 @@
 				  on IPv4 and IPV6 interfaces. A `%` will listen on  the first found LAN address.
 	type = TEXT
 	descriminator = IP
-	default-value = %
+	default-value = 
 
 [https.key-password]
 	name = Key Password
