More out-of-box experience fixes. Configuration auto reloads in file server and web server. Some work is needed to make this reload a bit less brutal. Docker builds now have environment variables for setup. mDNS in Docker disable, it just doesn't seem to work.

--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -66,6 +66,7 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
+							<attach>false</attach>
 							<finalName>tnfs-java-sdk-xplatform-anycpu</finalName>
 							<descriptors>
 								<descriptor>src/assembly/xplatform-bin.xml</descriptor>
@@ -192,6 +193,7 @@
 									<goal>single</goal>
 								</goals>
 								<configuration>
+									<attach>false</attach>
 									<finalName>${sdk.assembly.finalName}</finalName>
 									<descriptors>
 										<descriptor>${sdk.assembly.bin}</descriptor>
