--- a/sdk/src/main/nsis/configuration/tnfsjd/tnfsjd.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/tnfsjd.ini
@@ -16,7 +16,7 @@
 	; all IPv4 andor IPv6 interfaces, depending on the default configuration, \
 	; or `::` to listen on all IPv6 addresses or `0.0.0.0` to listen on all \
 	; IPv4 addresses. You can also use `%` to indicate the first found LAN address.
-	address = %
+	;address = *
 	
 	; Protocols - The protocols to listen for. By default, both TCP and UDP are enabled.
 	;protocols = TCP, UDP
@@ -29,7 +29,7 @@
 	
 	; Announce - Announce this server using mDNS, allowing other hosts on your network  
 	; to easily find it and its configuration.
-	announce = false
+	;announce = true
 	
 	; The address of the local interface that mDNS requests will be made from. If this is \
 	; a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
