--- a/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
@@ -2,7 +2,7 @@
 ;----------------------------------------
 ; Authentication - Configuration for authentication
 ;----------------------------------------
-;[authentication]
+[authentication]
 
 	; Where the servers key is located, either absolute, or \
 	; relative to this configuration file. The file is base64 encoded.
