--- a/sdk/src/main/nsis/configuration/tnfsjd-web/tnfsjd-web.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd-web/tnfsjd-web.ini
@@ -2,7 +2,7 @@
 ;----------------------------------------
 ; Server - Configuration for the HTTP/HTTPS server
 ;----------------------------------------
-[server]
+;[server]
 
 	; UPnP - Try to map the port on your router to this machine using UPnP, exposing  this server to the internet.
 	;upnp = false
@@ -10,7 +10,7 @@
 ;----------------------------------------
 ; mDNS - Configuration for ZeroConf
 ;----------------------------------------
-[mdns] 
+;[mdns] 
 	; The address of the local interface that mDNS requests will be made from. If this is \
 	; a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
 	; `http` or `https` section will be used, otherwise the address will be interpreted in the same way \
@@ -18,63 +18,63 @@
 	;address = %
 	 
 	; Announce - Announce this server using mDNS, allowing other hosts on your network  to easily find it and its configuration.
-	announce = false
+	;announce = true
 
 ;----------------------------------------
 ; Mounts - General configuration for mounts.
 ;----------------------------------------
-[mounts]
+;[mounts]
 
 	; Discover - Automatically discover and share mounts on the network using mDNS.
-	discover = false
+	;discover = true
 
 ;----------------------------------------
 ; Mount - Repeat mount sections for multiple mounts
 ;----------------------------------------
-[mount]
+;[mount]
 
 	; Hostname - The hostname or IP address of the TNFS server.
-	hostname = ${env:TNFS_MOUNT_HOSTNAME:-localhost}
+	;hostname = localhost
 
 	; Path - The root path of the mount on the TNFS server.
-	path = ${env:TNFS_MOUNT_PATH:-/}
+	;path = /
 
 	; Port - The port on which the TNFS server is listening.
-	port = ${env:TNFS_MOUNT_PORT:-16384}
+	;port = 16384
 
 	; Protocol - The protocol the TNFS server is listening for.
-	protocol = ${env:TNFS_MOUNT_PROTOCOL:-UDP}
+	;protocol = UDP
 
 	; Name - The name of the mount as it will be displayed to the user.  If not supplied, will be generated from the hostname, port  and  path.
-	name = ${env:TNFS_MOUNT_NAME:-TNFS on {hostname}}
+	;name = Local TNFS 
 
 ;----------------------------------------
 ; HHTTP - Options for the insecure plain HTTP protocol
 ;----------------------------------------
-[http]
+;[http]
 
 	; Port - The port number on which the server will listen for HTTP requests. When zero,  HTTP will be disabled.
 	;port = 14080
 
 	; Address - The IPv4 or IPv6 address of the interface the server will listen for HTTP  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
-	address = %
+	;address = %
 
 ;----------------------------------------
 ; HTTPS - Options for the insecure plain HTTPS protocol
 ;----------------------------------------
-[https]
+;[https]
 
 	; Port - The port number on which the server will listen for HTTPS requests.  When zero,  HTTPS will be disabled.
 	;port = 14443
 
 	; Address - The IPv4 or IPv6 address of the interface the server will listen for HTTPS  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
-	address = %
+	; address = %
 
 	; Key Password - The password for the key in the keystorre, if any.
 	; key-password = 
 	
 	; Keystore File - The path to the keystore file.
-	keystore-file = /configuration/ssl-keystore 
+	; keystore-file = 
 	
 	; Keystore Password - The password for the keystore itself.
 	; keystore-password = 
@@ -85,7 +85,7 @@
 ;----------------------------------------
 ; Tuning - Option options for tuning the server
 ;----------------------------------------
-[tuning]
+;[tuning]
 	
 	; Disable Compression - Prevent Gzip compression from being used.
 	;compression = true
@@ -102,7 +102,7 @@
 	;append = true
 	
 	; Directory
-	directory = /configuration/log
+	directory = log
 	
 	; Extended - Whether to add extended logging attributes.
 	;extended = true
