--- a/web/pom.xml
+++ b/web/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>uhttpd</artifactId>
-			<version>0.9.13-SNAPSHOT</version>
+			<version>0.9.13</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sshtools</groupId>
