--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -38,7 +38,7 @@ ENV TNFS_MOUNT_HOSTNAME=localhost
 ENV TNFS_MOUNT_PORT=16384
 ENV TNFS_MOUNT_PATH=/
 ENV TNFS_MOUNT_PROTOCOL=UDP
-ENV TNFS_MOUNT_NAME=Local TNFS
+ENV TNFS_MOUNT_NAME="Local TNFS"
 ENV LOG_LEVEL=INFO
 
 FROM debian:stable-slim 
