--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -201,6 +201,11 @@ tnfsfuse - Mount TNFS resource to local file system</description>
 		    <groupId>me.tongfei</groupId>
 		    <artifactId>progressbar</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.sshtools</groupId>
+		    <artifactId>nih</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
