Fixes remote completion with windows paths.

--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
@@ -67,3 +67,20 @@
 		to easily find it and its configuration. 
 	type = BOOLEAN
 	default-value = true
+
+; --------------------------------
+; Compatibility configuration
+; --------------------------------
+[compatibility]
+	name = Compatibility
+	description = Various compatibility options.
+	
+[compatibility.ignore-posix-permissions]
+	name = Ignore Posix Permissions
+	description = """
+				  When set, operating systems that don't support Posix permissions will
+				  just ignore 
+				  """ 
+	
+	
+	
