Use localhost mount directly in windows installer.

--- a/sdk/src/main/nsis/configuration/tnfsjd-web/tnfsjd-web.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd-web/tnfsjd-web.ini
@@ -31,22 +31,22 @@
 ;----------------------------------------
 ; Mount - Repeat mount sections for multiple mounts
 ;----------------------------------------
-;[mount]
+[mount]
 
 	; Hostname - The hostname or IP address of the TNFS server.
-	;hostname = localhost
+	hostname = localhost
 
 	; Path - The root path of the mount on the TNFS server.
-	;path = /
+	path = /
 
 	; Port - The port on which the TNFS server is listening.
-	;port = 16384
+	port = 16384
 
 	; Protocol - The protocol the TNFS server is listening for.
-	;protocol = UDP
+	protocol = UDP
 
 	; Name - The name of the mount as it will be displayed to the user.  If not supplied, will be generated from the hostname, port  and  path.
-	;name = Local TNFS 
+	name = Public TNFS on {hostname} 
 
 ;----------------------------------------
 ; HHTTP - Options for the insecure plain HTTP protocol
