Fixes `tnfscp`. More tidying up, Windows specific README.md for the installer.

--- a/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
@@ -1,17 +1,22 @@
 
 ;----------------------------------------
 ; Mount - Defines a single mounted path.
+;
+; NOTE: It is recommended you NOT change this file, instead use the "Drop-in"
+;       directory `mounts.ini.d`, and create a new file named `my-mounts.ini`. Then
+;       add the appropriate sections and keys to override the defaults.
+;
 ;----------------------------------------
 [mount]
 
-	; Exported Path - The path that is exported to clients.
-	path = /
+; Exported Path - The path that is exported to clients.
+path = /
 
-	; Local Path - The local path where these files for this mount actually are.
-	local = C:/Users/Public/AppData/TNFS/public-files
+; Local Path - The local path where these files for this mount actually are.
+local = C:/Users/Public/AppData/TNFS/public-files
 
-	; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
-	;authentication =  BASIC, SCRAM
-	
-	; Only allow read operations on this mount, regardless of the writability of the underlying file system.
-	read-only = false
+; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
+;authentication =  BASIC, SCRAM
+
+; Only allow read operations on this mount, regardless of the writability of the underlying file system.
+read-only = false
