--- a/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
@@ -1,10 +1,15 @@
 
 ;----------------------------------------
 ; Authentication - Configuration for authentication
+;
+; NOTE: It is recommended you NOT change this file, instead use the "Drop-in"
+;       directory `authentication.ini.d`, and create a new file named `my-authentication.ini`. Then
+;       add the appropriate sections and keys to override the defaults.
+;
 ;----------------------------------------
 [authentication]
 
-	; Where the servers key is located, either absolute, or \
-	; relative to this configuration file. The file is base64 encoded.
-	
-	;key-path = server-key.b64
+; Where the servers key is located, either absolute, or \
+; relative to this configuration file. The file is base64 encoded.
+
+;key-path = server-key.b64
