Fixes `tnfscp`. More tidying up, Windows specific README.md for the installer.

--- a/sdk/src/main/nsis/configuration/tnfsjd/tnfsjd.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/tnfsjd.ini
@@ -1,6 +1,10 @@
-
 ;----------------------------------------
 ; Server - Configuration for the TNFS server
+;
+; NOTE: It is recommended you NOT change this file, instead use the "Drop-in"
+;       directory `tnfsjd.ini.d`, and create a new file named `my-config.ini`. Then
+;       add the appropriate sections and keys to override the defaults.
+;
 ;----------------------------------------
 [server]
 
