--- a/sdk/src/main/packages/configuration/tnfsjd-web/tnfsjd-web.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd-web/tnfsjd-web.ini
@@ -2,7 +2,7 @@
 ;----------------------------------------
 ; Server - Configuration for the HTTP/HTTPS server
 ;----------------------------------------
-;[server]
+[server]
 
 ; UPnP - Try to map the port on your router to this machine using UPnP, exposing  this server to the internet.
 ;upnp = false
@@ -10,7 +10,7 @@
 ;----------------------------------------
 ; mDNS - Configuration for ZeroConf
 ;----------------------------------------
-;[mdns] 
+[mdns] 
 ; The address of the local interface that mDNS requests will be made from. If this is \
 ; a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
 ; `http` or `https` section will be used, otherwise the address will be interpreted in the same way \
@@ -23,7 +23,7 @@
 ;----------------------------------------
 ; Mounts - General configuration for mounts.
 ;----------------------------------------
-;[mounts]
+[mounts]
 
 ; Discover - Automatically discover and share mounts on the network using mDNS.
 ;discover = true
@@ -51,7 +51,7 @@
 ;----------------------------------------
 ; HHTTP - Options for the insecure plain HTTP protocol
 ;----------------------------------------
-;[http]
+[http]
 
 ; Port - The port number on which the server will listen for HTTP requests. When zero,  HTTP will be disabled.
 ;port = 14080
@@ -62,7 +62,7 @@
 ;----------------------------------------
 ; HTTPS - Options for the insecure plain HTTPS protocol
 ;----------------------------------------
-;[https]
+[https]
 
 ; Port - The port number on which the server will listen for HTTPS requests.  When zero,  HTTPS will be disabled.
 ;port = 14443
