--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -174,6 +174,11 @@ tnfsfuse - Mount TNFS resource to local file system</description>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>tnfs-java-lib-extensions</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>tnfs-java-fuse</artifactId>
 			<version>${project.version}</version>
 		</dependency>
