--- a/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
@@ -16,7 +16,7 @@ path = /
 local = C:/Users/Public/AppData/TNFS/public-files
 
 ; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
-;authentication =  BASIC, SCRAM
+authentication =  BASIC, ENCRYPTED
 
 ; Only allow read operations on this mount, regardless of the writability of the underlying file system.
 read-only = false
