--- a/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
@@ -2,4 +2,12 @@
 ;----------------------------------------
 ; Authentication - Configuration for authentication
 ;----------------------------------------
-[authentication]
+
+; The ID of one or authenticators to disable at start up. \
+; The ID could be anything depending on available extensions, but \
+; possible values include `password-file` to disable using the plain \
+; text password file or `system` to prevent local system users \
+; from being used.
+
+;disabled-authenticators = system 
+
