Config file tweaks. License, again.

--- a/daemon/src/main/docker/configuration/authentication.ini
+++ b/daemon/src/main/docker/configuration/authentication.ini
@@ -9,4 +9,4 @@
 ; text password file or `system` to prevent local system users \
 ; from being used.
 
-disabled-authenticators = system 
+disable-authenticator = system 
