--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Authentication.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Authentication.schema.ini
@@ -8,5 +8,5 @@
 		possible values include `password-file` to disable using the plain \
 		text password file or `system` to prevent local system users \
 		from being used.
-	arity = ANY
+	mulitplicity = ANY
 	type = TEXT 
