--- a/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
@@ -14,4 +14,4 @@
 ; text password file or `system` to prevent local system users \
 ; from being used.
 
-;disabled-authenticators = system 
+;disable-authenticator = system 
