--- a/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/authentication.ini
@@ -9,5 +9,5 @@
 ; text password file or `system` to prevent local system users \
 ; from being used.
 
-;disabled-authenticators = system 
+;disable-authenticator = system 
 
