--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/MountConfiguration.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/MountConfiguration.schema.ini
@@ -20,19 +20,38 @@
 	type = TEXT
 	discriminator = PATH
 	
-[mount.authentication]
-	name = Authentication 
-	description = The type of authentication required for this mount. An empty \
-				  list means no authenitcation is required at all (the default).
-	type = ENUM
+[mount.allow-read]
+	name = Allow Read
+	description = A user that can read from this mount. If no read users are defined, \
+			then the global `read-user` in the `mounts` section is used (if any). 
+			If `*` is used then *all* users can read this mount anonymously. Use `?` \
+			for any authenticated user, or `!` expands to any authenticated user \
+			with encryption.  
+	type = TEXT
 	multiplicity = ANY
-	value = BASIC
-	value = ENCRYPTED
 	
-[mount.read-only]
-	name = Read Only
-	description = Only allow read operations on this driver, regardless of the \
-		writability of the underlying file system.
-	type = BOOLEAN
-	default-value  = false
+[mount.allow-write]
+	name = Allow Write
+	description = A user that can write to this mount. If no write users are defined, \
+			then the global `write-user` in the `mounts` section is used (if any).
+			If '@' is used then *no* users can write to this mount. If `*` is used then \ 
+			any user can write this mount anonymously. Use `?` for any authenticated user, \
+			or `!` for any authenticated user with encryption.
+	type = TEXT
+	multiplicity = ANY
 	
+[mount.deny-read]
+	name = Deny Read
+	description = A user that cannot read from this mount. Any user here will override \
+			any `allow-read`  rule that might have allowed it. Only real user names are \
+			used here. Any users here are added to those in the global `mounts` section.
+	type = TEXT
+	multiplicity = ANY
+	
+[mount.deny-write]
+	name = Deny Write
+	description = A user that cannot write to this mount. Any user here will override \
+			any `allow-write`  rule that might have allowed it. Only real user names are \
+			used here. Any users here are added to those in the global `mounts` section.
+	type = TEXT
+	multiplicity = ANY
