--- a/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/mounts.ini
@@ -15,8 +15,17 @@ path = /
 ; Local Path - The local path where these files for this mount actually are.
 local = C:/Users/Public/AppData/TNFS/public-files
 
-; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
-authentication =  BASIC, ENCRYPTED
+; A user that can read from this mount. If no read users are defined, \
+; then the global `read-user` in the `server` section is used (if any). 
+; If `*` is used then *all* users can read this mount anonymously. Use `?` \
+; for any authenticated user, or `!` expands to any authenticated user \
+; with encryption.
+read-user = *
 
-; Only allow read operations on this mount, regardless of the writability of the underlying file system.
-read-only = false
+; A user that can write to this mount. If no write users are defined, \
+; then the global `write-user` in the `server` section is used (if any).
+; If '@' is used then *no* users can write to this mount. If `*` is used then \ 
+; any user can write this mount anonymously. Use `?` for any authenticated user, \
+; or `!` for any authenticated user with encryption.
+write-user = *
+
