--- a/sdk/src/main/packages/configuration/tnfsjd/tnfsjd.ini
+++ b/sdk/src/main/packages/configuration/tnfsjd/tnfsjd.ini
@@ -24,6 +24,20 @@
 ; Name - Use this as the advertised mDNS/Bonjour service name. Defaults to \
 ; `TNFS on {hostname}`.  {hostname} is replaced by actual hostname of bound address..
 ;name = TNFS on {hostname}
+
+[mounts]
+
+; A user that can read from this mount. If no read users are defined, \
+; or `*` is used then *all* users can read this mount anonymously. Use `?` \
+; for any authenticated user, or `!` expands to any authenticated user \
+; with encryption. This can be overridden in each individual mount.
+; read-user = *  
+	
+; A user that can write to this mount. If no write users are defined, \
+; or '@' is used then *no* users can write to this mount. If `*` is used then \ 
+; any user can write this mount anonymously. Use `?` for any authenticated user, \
+; or `!` for any authenticated user with encryption.
+;write-user = *
 	
 [mdns]
 	
