--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
@@ -46,6 +46,49 @@
 	default-value= TNFS on {hostname}
 
 ; --------------------------------
+; Mounts configuration
+; --------------------------------
+[mounts]
+	name = Mount
+	description = Global Configuration for mounts
+	
+[mounts.allow-read]
+	name = Allow Read
+	description = A user that can read from this mount. If no read users are defined, \
+			or `*` is used then *all* users can read this mount anonymously. Use `?` \
+			for any authenticated user, or `!` expands to any authenticated user \
+			with encryption. This can be overridden in each individual mount.
+	type = TEXT
+	multiplicity = ANY
+	
+[mounts.allow-write]
+	name = Allow Write
+	description = A user that can write to this mount. If no write users are defined, \
+			or '@' is used then *no* users can write to this mount. If `*` is used then \ 
+			any user can write this mount anonymously. Use `?` for any authenticated user, \
+			or `!` for any authenticated user with encryption. This can be overridden in \
+			each individual mount.
+	type = TEXT
+	multiplicity = ANY
+	
+[mount.deny-read]
+	name = Deny Read
+	description = A user that cannot read from this mount. Any user here will override \
+			any `allow-read`  rule that might have allowed it. Only real user names are \
+			used here. Any users here are added to those in the individual mount.
+	type = TEXT
+	multiplicity = ANY
+	
+[mount.deny-write]
+	name = Deny Write
+	description = A user that cannot write to this mount. Any user here will override \
+			any `allow-write`  rule that might have allowed it. Only real user names are \
+			used here. Any users here are added to those in the individual mount.
+	type = TEXT
+	multiplicity = ANY
+
+
+; --------------------------------
 ; mDNS configuration
 ; --------------------------------
 [mdns]
